<resources>
    <string name="app_name">Lesantarosa</string>
    <string name="app_tagline">Affectionate Confectionery</string>

    <!-- Navigation -->

    <string name="nav_main_group">Main</string>
    <string name="nav_inventory_group">Inventory</string>

    <string name="nav_home">Home</string>
    <string name="nav_sell">Sell</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_products">Products</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_ingredients">Ingredients</string>

    <!-- Menus -->

    <string name="menu_management_share">Share</string>
    <string name="menu_management_remove">Remove</string>

    <string name="menu_cart_clear">Clear</string>

    <string name="menu_note_clear">Clear</string>

    <!-- Tabs -->

    <string name="tab_inventory_items">Items</string>
    <string name="tab_inventory_stocks">Stocks</string>
    <string name="tab_inventory_categories">Categories</string>

    <string name="tab_management_manage">Manage</string>
    <string name="tab_management_stock">Stock</string>

    <string name="tab_orders_pending">Pending</string>
    <string name="tab_orders_finished">Finished</string>

    <!-- Dialogs -->

    <string name="dialog_options_button_to_note">Notes</string>
    <string name="dialog_options_button_to_discount">Discounts</string>
    <string name="dialog_options_button_to_clear_cart">Clear Cart</string>

    <string name="dialog_category_input_hint">Enter a new category</string>
    <string name="dialog_category_char_limit">Limit 20 characters</string>

    <string name="dialog_discount_fixed_discount">Fixed Discount</string>
    <string name="dialog_discount_percentage_discount">Percentage Discount</string>
    <string name="dialog_discount_final_price">Final Price:</string>
    <string name="dialog_discount_fixed_discount_input_hint">Enter Discount Value</string>
    <string name="dialog_discount_percentage_discount_input_hint">Enter Percentage Value</string>

    <string name="dialog_note_input_note_hint">Enter a Note</string>

    <string name="dialog_payment_methods_title">Payment Methods</string>

    <!-- Inputs & Placeholders -->

    <string name="default_button">Confirm</string>

    <string name="input_initial_quantity">0</string>
    <string name="input_initial_price">R$ 0.00</string>

    <string name="input_search_on_focus_hint">Type Here</string>
    <string name="input_search_item_hint">Search for Items</string>
    <string name="input_search_stock_hint">Search for Stocks</string>
    <string name="input_search_category_hint">Search for Categories</string>
    <string name="input_search_sale_hint">Search for Products</string>
    <string name="input_search_order_hint">Search for Orders</string>

    <string name="input_item_title_hint">Title</string>
    <string name="input_item_description_hint">Description</string>
    <string name="input_item_price_hint">Price</string>
    <string name="input_item_shelf_life_hint">Shelf Life</string>

    <string name="input_item_title_error">Invalid Title</string>
    <string name="input_item_description_error">Invalid Description</string>
    <string name="input_item_price_error">Invalid Price</string>
    <string name="input_item_shelf_life_error">Invalid Shelf Life</string>

    <string name="input_product_weight_hint">Weight</string>
    <string name="input_product_packaging_hint">Packaging</string>
    <string name="input_product_sales_count_hint">Sales Count</string>

    <string name="input_product_weight_error">Invalid Weight</string>
    <string name="input_product_packaging_error">Invalid Packaging</string>
    <string name="input_product_sales_count_error">Invalid Sales Count</string>

    <string name="input_recipe_yield_hint">Yield</string>
    <string name="input_recipe_servings_hint">Servings</string>
    <string name="input_recipe_preparation_time_hint">Preparation Time</string>

    <string name="input_recipe_yield_error">Invalid Yield</string>
    <string name="input_recipe_servings_error">Invalid Servings</string>
    <string name="input_recipe_preparation_time_error">Invalid Preparation Time</string>

    <string name="input_ingredient_brand_hint">Brand</string>
    <string name="input_ingredient_supplier_hint">Servings</string>
    <string name="input_ingredient_nutritional_info_hint">Nutritional Info</string>

    <string name="input_ingredient_brand_error">Invalid Brand</string>
    <string name="input_ingredient_supplier_error">Invalid Servings</string>
    <string name="input_ingredient_nutritional_info_error">Invalid Nutritional Info</string>

    <!-- Enum -->

    <string name="item_type_products">Products</string>
    <string name="item_type_recipe">Recipes</string>
    <string name="item_type_ingredients">Ingredients</string>

    <string name="measure_unit_gram">Grams</string>
    <string name="measure_unit_kilogram">Kilograms</string>
    <string name="measure_unit_liter">Liters</string>
    <string name="measure_unit_milliliter">Milliliters</string>
    <string name="measure_unit_unit">Units</string>
    <string name="measure_unit_cup">Cups</string>
    <string name="measure_unit_tablespoon">Tablespoons</string>
    <string name="measure_unit_teaspoon">Teaspoons</string>

    <string name="payment_method_cash">Cash</string>
    <string name="payment_method_credit_card">Credit</string>
    <string name="payment_method_debit_card">Debit</string>
    <string name="payment_method_pix">Pix</string>
    <string name="payment_method_bank_transfer">Bank Transfer</string>
    <string name="payment_method_digital_wallet">Digital Wallet</string>
    <string name="payment_method_qr_code">QR Code</string>

    <string name="order_status_all">All Orders</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_confirmed">Confirmed</string>
    <string name="order_status_in_production">In Production</string>
    <string name="order_status_out_for_delivery">Out for Delivery</string>
    <string name="order_status_ready_for_pickup">Ready for Pickup</string>

</resources>