<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fixed_discount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/dialog_discount_fixed_discount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/fixed_discount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:textSize="17sp"
        android:gravity="start"
        android:inputType="none"
        android:hint="@string/dialog_discount_fixed_discount_input_hint"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@+id/fixed_discount_textview"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/percentage_discount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/dialog_discount_percentage_discount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fixed_discount_edit_text"/>

    <EditText
        android:id="@+id/percentage_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:textSize="17sp"
        android:gravity="start"
        android:inputType="none"
        android:hint="@string/dialog_discount_percentage_discount_input_hint"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentage_discount_textview"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/final_price_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/dialog_discount_final_price"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/final_price_text_view"/>

            <TextView
                android:id="@+id/final_price_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textSize="30sp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/save_discount_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_discount_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textColor="@color/light_grey"
                android:backgroundTint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>